--- a/Spoon-16-20-main/CSS/basic.css
+++ b/Spoon-16-20-main/CSS/basic.css
@@ -66,3 +66,13 @@ ul, ol{
     margin: 0;
     padding: 0;
 }
+
+.link{
+    font-family: var(--fontIBM);
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 164%;
+    text-transform: uppercase;
+    text-align: center;
+    color: #5ab963;
+}
