--- a/Spoon-16-20-main/CSS/main.css
+++ b/Spoon-16-20-main/CSS/main.css
@@ -4,3 +4,5 @@
 @import url(sections/service.css);
 @import url(sections/advert.css);
 @import url(sections/offers.css);
+@import url(sections/party.css);
+@import url(sections/footer.css);
