--- a/Spoon-16-20-main/CSS/sections/advert.css
+++ b/Spoon-16-20-main/CSS/sections/advert.css
@@ -2,7 +2,7 @@
     margin-top: 120px;
 }
 
-.advent__container {
+.advert__container {
     max-width: 1380px;
     margin: 0 auto;
 }
@@ -19,12 +19,12 @@
     max-width: 685px;
 }
 
-.info {
-}
-
-.link {
-}
-
 .advert__link {
     margin-top: 33px;
-} 
+}
+
+@media(max-width:800px){
+    .advert__contant{
+        margin-top: 70px;
+    }
+}
